added link to GitHub repository

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>homework week 5</title>
+    <title>Homework GitHub+Hosting</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
@@ -78,7 +78,7 @@
         </div>
       </div>
     </div>
-
+<small> <a href="https://github.com/AnaAndreea1999/weather-app.git" target="blank">Open-source code</a>, by Ana-Andreea Badiu </small>
     <script src="src/index.js"></script>
   </body>
 </html>
